--- a/Assignment1/_Imports.razor
+++ b/Assignment1/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using DNP_Assignements
-@using DNP_Assignements.Shared
+@using Assignment1
+@using Assignment1.Shared
