--- a/Assignment1/Pages/Index.razor
+++ b/Assignment1/Pages/Index.razor
@@ -1,5 +1,66 @@
 ﻿@page "/"
+@using Models
+@inject IFamilyService FamilyService
+@inject NavigationManager NavigationManager
+<div class="form-group">
+    <div class="title-box">
+        <h3>Select Family Address</h3>
+        <select @bind="address" @onclick=DisplayUsers>
+            @foreach (Family family in families)
+            {
+                <option>@family.StreetName @family.HouseNumber</option>
+            }
+        </select>
+    </div>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+    @if (selectedFamily != null)
+    {
+    
+    <div class="container d-flex justify-content-center">
+        <div class="row">
+            <div class="col-md"><UserBox Person="Administrator"/></div>
+            <div class="col-md"><UserBox Person="RegularUser"/></div>
+            <div class="col-md"><UserBox Person="Visitor"/></div>
+        </div>
+    </div>
+    }
+    <button type="button" @onclick=GoToFamilyTree>Open Family</button>
+</div>
+
+@code
+{
+     private IList<Family> families;
+     private string address;
+     private Family selectedFamily;
+     private bool usersComponents;
+
+     protected override void OnInitialized()
+     {
+         families = FamilyService.GetAllFamilies();
+     }
+
+     public void GoToFamilyTree()
+     {
+         NavigationManager.NavigateTo("/FamilyTree/" + address);
+     }
+
+     public void DisplayUsers()
+     {
+         if (address != null)
+         {
+             foreach (var family in families)
+             {
+                 if (address.Equals(family.StreetName + " " + family.HouseNumber))
+                 {
+                     selectedFamily = family;
+                 }
+             }
+         }
+
+         if (selectedFamily != null)
+             usersComponents = true;
+     }
+
+}
+
