--- a/Assignment1/Pages/_Host.cshtml
+++ b/Assignment1/Pages/_Host.cshtml
@@ -33,5 +33,13 @@
 </div>
 
 <script src="_framework/blazor.server.js"></script>
+<script type="text/javascript">
+        window.getDimensions = function() {
+            return {
+                    width: window.innerWidth,
+                    height: window.innerHeight
+                };
+        };
+</script>
 </body>
 </html>
