--- a/Assignment1/wwwroot/css/site.css
+++ b/Assignment1/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    height:100%;
 }
 
 a, .btn-link {
@@ -181,3 +182,45 @@ app {
         display: block;
     }
 }
+
+.background{
+    background-image: url("../img/background.png");
+    width: 100%;
+    height: 100vh; 
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 40%;
+    background-color: #1b6ec2;
+}
+
+.circle-icon{
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    transition: transform .5s;
+}
+.circle-icon:hover{
+    transform: scale(1.5);
+}
+
+.user-box{
+    width: 250px;
+    height: 300px;
+    border-radius: 5%;
+    border: 1px solid black;
+    text-align: center;
+    padding: 10px;
+}
+
+.title-box{
+    width: 100%;
+    padding: 50px;
+    text-align: center;
+    
+}
+
+.form-group{
+    width: 100%;
+}
+
+
