--- a/Assignment1/Shared/MainLayout.razor
+++ b/Assignment1/Shared/MainLayout.razor
@@ -1,8 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Mvc.ModelBinding.Binders
 @inherits LayoutComponentBase
 @Body
-
-
-@code{
-    
-}
+<CascadingBlazoredModal Animation="ModalAnimation.FadeIn(1)"/>
