--- a/Assignment1/_Imports.razor
+++ b/Assignment1/_Imports.razor
@@ -9,3 +9,6 @@
 @using Assignment1.Shared
 @using Assignment1.Components
 @using Assignment1.Data
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
