--- a/Assignment1/Pages/_Host.cshtml
+++ b/Assignment1/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
+    <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
 </head>
 <body>
 <app>
@@ -33,6 +34,8 @@
 </div>
 
 <script src="_framework/blazor.server.js"></script>
+<script src="_content/BlazorInputFile/inputfile.js"></script>
+   <script src="_content/Blazored.Modal/blazored.modal.js"></script>
 <script type="text/javascript">
         window.getDimensions = function() {
             return {
