Did some merging

--- a/Assignment1/Components/UserBox.razor
+++ b/Assignment1/Components/UserBox.razor
@@ -50,7 +50,7 @@
                 break;
             case "Visitor":
                 username = "Visitor";
-                userDescription = "Function for viewing family information is available for thins type of account";
+                userDescription = "Function for viewing family information is available for this type of account";
                 break;
         }
     }
