--- a/Assignment1/_Imports.razor
+++ b/Assignment1/_Imports.razor
@@ -9,6 +9,9 @@
 @using Assignment1.Shared
 @using Assignment1.Components
 @using Assignment1.Data
+@using Assignment1.Authentication
+@using Assignment1.Validation
+
 @using Blazored
 @using Blazored.Modal
 @using Blazored.Modal.Services
