--- a/Assignment1/Pages/_Host.cshtml
+++ b/Assignment1/Pages/_Host.cshtml
@@ -14,12 +14,12 @@
     <title>Assignment1</title>
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
-    <link href="css/site.css" rel="stylesheet"/>
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet"/>
 </head>
 <body>
 <app>
-    <component type="typeof(App)" render-mode="ServerPrerendered"/>
+    <component type="typeof(App)" render-mode="Server"/>
 </app>
 
 <div id="blazor-error-ui">
@@ -35,7 +35,7 @@
 
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/BlazorInputFile/inputfile.js"></script>
-   <script src="_content/Blazored.Modal/blazored.modal.js"></script>
+<script src="_content/Blazored.Modal/blazored.modal.js"></script>
 <script type="text/javascript">
         window.getDimensions = function() {
             return {
