Before big merge idk

--- a/Assignment1/_Imports.razor
+++ b/Assignment1/_Imports.razor
@@ -15,3 +15,6 @@
 @using Blazored
 @using Blazored.Modal
 @using Blazored.Modal.Services
+
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Charts
