--- a/Assignment1/Pages/_Host.cshtml
+++ b/Assignment1/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
     <base href="~/"/>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="_content/Blazored.Modal/blazored-modal.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet"/>
 </head>
 <body>
